Ensure table cells are vertically aligned

--- a/public/sass/common.scss
+++ b/public/sass/common.scss
@@ -80,3 +80,7 @@ $flashes: 5;
   max-height: 200px;
   overflow: hidden scroll;
 }
+
+td {
+  vertical-align: middle !important;
+}
